--- a/iOS_Challenge/Presentation/View/StoryBoard/Search.storyboard
+++ b/iOS_Challenge/Presentation/View/StoryBoard/Search.storyboard
@@ -28,27 +28,95 @@
             <point key="canvasLocation" x="-1151" y="124"/>
         </scene>
         <!--Search View Controller-->
-        <scene sceneID="hBv-jW-Mle">
+        <scene sceneID="of1-Qj-JN1">
             <objects>
-                <viewController storyboardIdentifier="searchView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Vx1-fj-l3b" customClass="SearchViewController" customModule="iOS_Challenge" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="COu-s3-XlH">
+                <viewController storyboardIdentifier="searchView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="x1A-uS-ffi" customClass="SearchViewController" customModule="iOS_Challenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BUJ-on-xMZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XWY-Z4-tEC">
+                            <searchBar contentMode="redraw" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lH3-Le-8In">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="WZt-TI-Zkl"/>
+                                </constraints>
                                 <color key="barTintColor" red="0.33333333329999998" green="0.7725490196" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="I2m-BN-RjA">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchWordCell" textLabel="63r-hk-Ofp" style="IBUITableViewCellStyleDefault" id="lc7-zJ-RJL">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="lc7-zJ-RJL" id="gWA-Kb-bb2">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="63r-hk-Ofp">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="MvA-eO-Eyw"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="lH3-Le-8In" secondAttribute="trailing" id="HnE-VF-TEd"/>
+                            <constraint firstItem="I2m-BN-RjA" firstAttribute="bottom" secondItem="Ezd-l8-10E" secondAttribute="bottom" id="P55-AX-vVU"/>
+                            <constraint firstItem="lH3-Le-8In" firstAttribute="leading" secondItem="I2m-BN-RjA" secondAttribute="leading" id="c5u-GL-0KY"/>
+                            <constraint firstItem="lH3-Le-8In" firstAttribute="leading" secondItem="BUJ-on-xMZ" secondAttribute="leading" id="khm-9H-hxN"/>
+                            <constraint firstItem="I2m-BN-RjA" firstAttribute="top" secondItem="lH3-Le-8In" secondAttribute="bottom" id="o8L-kE-lB2"/>
+                            <constraint firstItem="lH3-Le-8In" firstAttribute="trailing" secondItem="I2m-BN-RjA" secondAttribute="trailing" id="y1R-i0-lUa"/>
+                            <constraint firstItem="lH3-Le-8In" firstAttribute="top" secondItem="Ezd-l8-10E" secondAttribute="top" id="yxY-TY-G13"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ezd-l8-10E"/>
                     </view>
+                    <connections>
+                        <outlet property="searchBar" destination="lH3-Le-8In" id="z6l-Jb-vFB"/>
+                        <outlet property="tableView" destination="I2m-BN-RjA" id="A0y-UI-gb0"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7Ug-DP-Vrh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kDG-GH-6NK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-155" y="124"/>
+            <point key="canvasLocation" x="-85.507246376811594" y="132.58928571428572"/>
+        </scene>
+        <!--Search Result View Controller-->
+        <scene sceneID="jhG-PF-pzC">
+            <objects>
+                <viewController storyboardIdentifier="searchResultView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="lR5-4k-Bin" customClass="SearchResultViewController" customModule="iOS_Challenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lrz-5H-8Cp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vP7-9K-ttL">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vP7-9K-ttL" firstAttribute="bottom" secondItem="lde-CY-lhS" secondAttribute="bottom" id="Kld-nf-Eh6"/>
+                            <constraint firstItem="vP7-9K-ttL" firstAttribute="top" secondItem="lde-CY-lhS" secondAttribute="top" id="Mef-Pg-Opb"/>
+                            <constraint firstAttribute="trailing" secondItem="vP7-9K-ttL" secondAttribute="trailing" id="OQU-mF-lcd"/>
+                            <constraint firstItem="vP7-9K-ttL" firstAttribute="leading" secondItem="lrz-5H-8Cp" secondAttribute="leading" id="xyW-L9-vRs"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lde-CY-lhS"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="vP7-9K-ttL" id="L5L-Wp-Sdj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sWf-cV-Z4C" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="837.68115942028987" y="167.41071428571428"/>
         </scene>
     </scenes>
 </document>
