create stock view, change text color

--- a/iOS_Challenge/Presentation/View/StoryBoard/Articles.storyboard
+++ b/iOS_Challenge/Presentation/View/StoryBoard/Articles.storyboard
@@ -21,6 +21,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ahO-WO-KtX">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wbt-rH-4EZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
