--- a/iOS_Challenge/Presentation/View/StoryBoard/Stock.storyboard
+++ b/iOS_Challenge/Presentation/View/StoryBoard/Stock.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,6 +26,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CLy-jG-BkM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1096" y="165"/>
+        </scene>
+        <!--Stock Articles View Controller-->
+        <scene sceneID="kqd-SG-LaC">
+            <objects>
+                <viewController storyboardIdentifier="stockArticlesView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="P8h-hY-5hx" customClass="StockArticlesViewController" customModule="iOS_Challenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XcW-iD-saI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NX7-y7-eXQ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="NX7-y7-eXQ" firstAttribute="leading" secondItem="XcW-iD-saI" secondAttribute="leading" id="dcQ-yN-qpk"/>
+                            <constraint firstItem="NX7-y7-eXQ" firstAttribute="bottom" secondItem="Blz-RL-raL" secondAttribute="bottom" id="nIh-SK-l43"/>
+                            <constraint firstAttribute="trailing" secondItem="NX7-y7-eXQ" secondAttribute="trailing" id="v6g-aV-cIj"/>
+                            <constraint firstItem="NX7-y7-eXQ" firstAttribute="top" secondItem="Blz-RL-raL" secondAttribute="top" id="zUG-02-v3t"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Blz-RL-raL"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="NX7-y7-eXQ" id="CGQ-qk-98z"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qRz-sL-M5W" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-304.34782608695656" y="171.42857142857142"/>
         </scene>
     </scenes>
 </document>
