--- a/iOS_Challenge/Presentation/View/StoryBoard/Search.storyboard
+++ b/iOS_Challenge/Presentation/View/StoryBoard/Search.storyboard
@@ -21,6 +21,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lUV-hT-gdu">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A7I-fX-8yL" userLabel="First Responder" sceneMemberID="firstResponder"/>
