--- a/iOS_Challenge/Presentation/View/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS_Challenge/Presentation/View/StoryBoard/Base.lproj/Main.storyboard
@@ -146,6 +146,52 @@
             </objects>
             <point key="canvasLocation" x="-455" y="1051"/>
         </scene>
+        <!--メニュー-->
+        <scene sceneID="Hz5-mi-yje">
+            <objects>
+                <tableViewController storyboardIdentifier="sideMenuTableView" title="メニュー" useStoryboardIdentifierAsRestorationIdentifier="YES" id="uGc-eU-Jbg" customClass="SideMenuTableViewController" customModule="iOS_Challenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pq0-23-22v">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="OV7-1o-zbQ">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OV7-1o-zbQ" id="J8O-bW-HnN">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="uGc-eU-Jbg" id="As9-XW-iUi"/>
+                            <outlet property="delegate" destination="uGc-eU-Jbg" id="ElP-qQ-IAi"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="PpV-eQ-xxB"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gLU-oT-o2t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1404" y="1071"/>
+        </scene>
+        <!--Side Menu Navigation Controller-->
+        <scene sceneID="q0C-AS-3UD">
+            <objects>
+                <navigationController storyboardIdentifier="sideMenuNav" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Ccy-jN-Th8" customClass="UISideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="l4I-dx-g3A">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.33333333329999998" green="0.7725490196" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="leftSide" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zIf-9n-kLO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="452" y="1059"/>
+        </scene>
     </scenes>
     <resources>
         <image name="searchQ.png" width="41.142856597900391" height="41.142856597900391"/>
